[gd_scene load_steps=6 format=3 uid="uid://d3bug1vt3rkra"]

[ext_resource type="Theme" uid="uid://col7vvi13kpn4" path="res://Resources/GameContainer.tres" id="1_hmgpe"]
[ext_resource type="Texture2D" uid="uid://cj1e5hif5hdxh" path="res://Images/SunkBackground.png" id="2_1f3xj"]
[ext_resource type="Script" path="res://Scripts/Menus/LevelList.gd" id="2_opgho"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j6mg7"]

[sub_resource type="Theme" id="Theme_a8hx1"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_j6mg7")

[node name="Control" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hmgpe")
script = ExtResource("2_opgho")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
self_modulate = Color(0, 0, 0.498039, 1)
layout_mode = 2
theme = SubResource("Theme_a8hx1")

[node name="LevelNameText" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Levels"

[node name="Level1" type="PanelContainer" parent="VBoxContainer" groups=["Levels"]]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Level1"]
layout_mode = 2

[node name="Level1PlayButton" type="TextureButton" parent="VBoxContainer/Level1/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_1f3xj")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Level1/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/Level1/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Name"

[node name="Label2" type="Label" parent="VBoxContainer/Level1/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Best Time: 00:00:00"

[node name="Level2" type="PanelContainer" parent="VBoxContainer" groups=["Levels"]]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Level2"]
layout_mode = 2

[node name="Level2PlayButton" type="TextureButton" parent="VBoxContainer/Level2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_1f3xj")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Level2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/Level2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Name"

[node name="Label2" type="Label" parent="VBoxContainer/Level2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Best Time: 00:00:00"

[node name="Level3" type="PanelContainer" parent="VBoxContainer" groups=["Levels"]]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Level3"]
layout_mode = 2

[node name="Level3PlayButton" type="TextureButton" parent="VBoxContainer/Level3/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_1f3xj")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Level3/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/Level3/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Name"

[node name="Label2" type="Label" parent="VBoxContainer/Level3/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Best Time: 00:00:00"

[node name="Level4" type="PanelContainer" parent="VBoxContainer" groups=["Levels"]]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Level4"]
layout_mode = 2

[node name="Level4PlayButton" type="TextureButton" parent="VBoxContainer/Level4/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_1f3xj")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Level4/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/Level4/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Name"

[node name="Label2" type="Label" parent="VBoxContainer/Level4/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Best Time: 00:00:00"

[node name="Level5" type="PanelContainer" parent="VBoxContainer" groups=["Levels"]]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Level5"]
layout_mode = 2

[node name="Level5PlayButton" type="TextureButton" parent="VBoxContainer/Level5/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_1f3xj")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Level5/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/Level5/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Name"

[node name="Label2" type="Label" parent="VBoxContainer/Level5/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Best Time: 00:00:00"

[connection signal="mouse_entered" from="VBoxContainer/Level1/HBoxContainer/Level1PlayButton" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Level1/HBoxContainer/Level1PlayButton" to="." method="_on_level_1_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2/HBoxContainer/Level2PlayButton" to="." method="_on_level_2_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3/HBoxContainer/Level3PlayButton" to="." method="_on_level_3_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level4/HBoxContainer/Level4PlayButton" to="." method="_on_level_4_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level5/HBoxContainer/Level5PlayButton" to="." method="_on_level_5_play_button_pressed"]
